# ponyc

./: .appveyor.yml  .bintray.bash  .bintray.sh  .bintray_deb.bash  .cirrus.star  .cirrus.yml  .clang-format  .drone.sec  .drone.yml  .gitattributes  .gitignore  .gitmodules  .ignore  .markdownlintignore  .securefiles.tar.enc  .travis.yml  .travis_commands.bash  .travis_common.bash  .travis_install.bash  .travis_other.bash  .travis_release.bash  .travis_script.bash  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Dockerfile  EDITORS.md  GEMINI.md  GNUmakefile  INSTALL.md  INSTALL_DOCKER.md  LICENSE  Makefile  Makefile-lib-llvm  (+29 more)
benchmark/libponyc/: CMakeLists.txt  README.md
benchmark/libponyc/common/: common.cc
benchmark/libponyrt/: CMakeLists.txt  README.md  gbenchmark_main.cc
benchmark/libponyrt/ds/: hash.cc
benchmark/libponyrt/mem/: README.md  heap.cc  pool.cc
lib/: CMakeLists.txt  CMakePresets.json  README.md  build-libs.cmake
lib/blake2/: blake2.h  blake2b-ref.c
lib/gbenchmark/: gbenchmark-all.cc  gbenchmark_main.cc
lib/gbenchmark/src/: benchmark.cc  benchmark_runner.cc  commandlineflags.cc  complexity.cc  internal_macros.h  sysinfo.cc  timers.cc
lib/gtest/gtest/: gtest.h
lib/gtest/src/: gtest-filepath.cc  gtest-printers.cc
lib/llvm/: .gitignore  CMakeLists.txt  Makefile  README.md  llvm-3.9.1.cfg  llvm-8.x.cfg  llvm-base.rules  llvm-default.cfg  llvm-options.sh
lib/llvm/patches/: 2019-12-23-01-jit-eh-frames.diff  2020-01-07-01-c-exports.diff  2020-07-28-01-c-exports.diff  2020-09-01-is-trivially-copyable.diff  2025-04-30-gcc-15.diff  clang-codegen-analysis-gen-dep.diff  disable-readonly-inliner-propagation.diff  lld-openbsd-section-merge.diff  lld-sysroot-fallback.diff  llvm15-musl-lseek64.diff
lib/rapidcheck/: LICENSE.md
lib/rapidcheck/include/: rapidcheck.h
lib/rapidcheck/src/: BeforeMinimalTestCase.cpp  Check.cpp  Classify.cpp  GenerationFailure.cpp  Log.cpp  Random.cpp  Show.cpp
src/libponyc/: CMakeLists.txt  doctool.c  logo.h  ponyc.c  ponyc.h  ponydoc.c
src/libponyc/ast/: ast.c  ast.h  astbuild.h  bnfprint.c  bnfprint.h  builder.c  builder.h  dbg_ast.h  error.c  error.h  frame.c  frame.h  id.c  id.h  id_internal.h  lexer.c  lexer.h  lexint.c  lexint.h  parser.c  parser.h  parserapi.c  parserapi.h  printbuf.c  printbuf.h  source.c  source.h  stringtab.c  stringtab.h  symtab.c  symtab.h  token.c  token.h  treecheck.c  treecheck.h  treecheckdef.h
src/libponyc/bigint/: base.h  bigint.h  signed.cc  signed.h  unsigned.cc  unsigned.h
src/libponyc/blake2/: blake2-impl.h
src/libponyc/codegen/: codegen.c  codegen.h  colour.c  colour.h  debug.cc  dwarf.c  dwarf.cc  dwarf.h  genbox.c  genbox.h  genc.cc  genc.h  gencall.c  gencall.h  gencontrol.c  gencontrol.h  gencshim.cc  gencshim.h  gendebug.cc  gendebug.h  gendesc.c  gendesc.h  genexe.c  genexe.cc  genexe.h  genexpr.c  genexpr.h  genffi.c  genffi.h  genfun.c  genfun.h  genheader.c  genheader.h  genident.c  genident.h  genjit.c  genjit.cc  genjit.h  genjit_old.cc  genlib.c  (+24 more)
src/libponyc/debug/: dwarf.c  dwarf.cc  dwarf.h  symbols.cc  symbols.h
src/libponyc/ds/: functions.h  hash.c  hash.h  list.c  list.h  stringtab.c  stringtab.h  table.c  table.h
src/libponyc/expr/: array.c  array.h  call.c  call.h  control.c  control.h  ffi.c  ffi.h  lambda.c  lambda.h  literal.c  literal.h  match.c  match.h  operator.c  operator.h  postfix.c  postfix.h  reference.c  reference.h
src/libponyc/options/: options.c  options.h
src/libponyc/pass/: args.c  args.h  casemethod.c  casemethod.h  codegen.c  codegen.h  completeness.c  completeness.h  dartsrc.c  dartsrc.h  doc_extra.c  doc_extra.h  docgen.c  docgen.h  docgen_logo.c  docgen_logo.h  dummy.c  dummy.h  expr.c  expr.h  extra_css.c  extra_js.c  finalisers.c  finalisers.h  flatten.c  flatten.h  import.c  import.h  names.c  names.h  parsefix.c  parsefix.h  pass.c  pass.h  refer.c  refer.h  reference.c  reference.h  scope.c  scope.h  (+21 more)
src/libponyc/pkg/: buildflagset.c  buildflagset.h  ifdef.c  ifdef.h  package.c  package.h  package_CLAUDE.c  package_GEMINI.c  platformfuns.c  platformfuns.h  program.c  program.cc  program.h  use.c  use.h
src/libponyc/platform/: bigint.cc  bigint.hpp  format.c  format.h  int128.h  io.c  io.h  map_file.c  map_file.h  paths.c  platform.h  primitives.h  signed.cc  signed.h  unsigned.cc  unsigned.h  utils.c  utils.h  vcvars.c
src/libponyc/plugin/: plugin.c  plugin.h
src/libponyc/reach/: paint.c  paint.h  reach.c  reach.h  subtype.c  subtype.h
src/libponyc/type/: alias.c  alias.h  assemble.c  assemble.h  cap.c  cap.h  compattype.c  compattype.h  lookup.c  lookup.h  matchtype.c  matchtype.h  nominal.c  nominal.h  reify.c  reify.h  safeto.c  safeto.h  sanitise.c  sanitise.h  subtype.c  subtype.h  subtype_cache.c  subtype_cache.h  type_assume.c  type_assume.h  typealias.c  typealias.h  typeparam.c  typeparam.h  viewpoint.c  viewpoint.h
src/libponyc/verify/: call.c  call.h  control.c  control.h  fun.c  fun.h  type.c  type.h
src/libponyrt/: CMakeLists.txt  dtrace_freebsd_postbuild.sh  pony.h
src/libponyrt/actor/: actor.c  actor.h  messageq.c  (+1 more)
src/ponyc/: CMakeLists.txt  main.c  options.c  options.h
src/ponyc-shim/: CMakeLists.txt  ponyc-shim.c
test/full-program-tests/: CMakeLists.txt  README.md
test/libponyc/: CMakeLists.txt  alias.cc  annotations.cc  array.cc  auto_recover.cc  badpony.cc  badpony_CLAUDE.cc  badpony_GEMINI.cc  bare.cc  builder.cc  buildflagset.cc  builtin_ast.h  cap.cc  cap_safety.cc  chain.cc  codegen.cc  codegen_ffi.cc  codegen_final.cc  codegen_identity.cc  codegen_optimisation.cc  codegen_trace.cc  compiler_serialisation.cc  cshim.cc  dartsrc.cc  dbg_ast.cc  dontcare.cc  ffi.cc  finalisers.cc  flatten.cc  id.cc  iftype.cc  lambda.cc  lexer.cc  lexer_comment.cc  lexer_number.cc  lexer_string.cc  lexint.cc  literal_inference.cc  literal_limits.cc  local_inference.cc  (+44 more)
test/libponyc-run/: .gitignore  CMakeLists.txt  runner.bash  runner.sh
test/libponyrt/: CMakeLists.txt  asio_epoll.cc  util.cc  util.h
(+2699 files in other folders)
